# Game-Reviews

./: .gitignore  package-lock.json  package.json  pyproject.toml
.github/workflows/: main_good-gaming.yml
Game_Reviews/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile.py  0003_alter_profile_profile_picture.py
common/: mixins.py  urls.py  validators.py  views.py
common/templatetags/: user_in_group_filter.py
games/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_rating.py  0003_game_image.py  0004_game_tags.py  0005_alter_game_image.py  0006_alter_game_image.py
reviews/: admin.py  forms.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_review_content_alter_review_game.py
static/css/: all-games.css  edit-game.css  edit-review.css  game-details.css  home-page.css  profile-details.css  style.css
static/js/: add-review.js  edit-review.js  rating-events.js
tags/: admin.py  forms.py  models.py  urls.py  views.py
tags/migrations/: 0001_initial.py  0002_remove_tag_games.py
templates/accounts/: login.html  profile-details.html  profile-edit.html  register.html
templates/common/: base.html  home-page.html
templates/games/: all-games.html  create-game.html  details-game.html  edit-game.html  game-confirm-delete.html
templates/reviews/: edit-review.html  review-confirm-delete.html
templates/tags/: all-tags.html  create-tag.html  (+2 more)
(+1 files in other folders)
