[project]
name = "game-reviews"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cloudinary>=1.44.1",
    "django>=5.2.4",
    "django-bleach>=3.1.0",
    "django-cloudinary-storage>=0.3.0",
    "django-environ>=0.12.0",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.16.0",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2.9",
    "whitenoise>=6.9.0",
]
